DockerVersion/src/main/java/com/example/dockerversion/error/PackageReadException.java
package com.example.dockerversion.error;

public class PackageReadException extends RuntimeException{
    public PackageReadException() {
        super("Packet didn't read!");
    }
}